# workshop-website

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  design.yml  improvement.yml  qa.yml
.github/workflows/: ci.yml
scripts/: check.py  fix.py
static/css/: tokens.css
tools/ai-pipeline/: config.js  pipeline.js  test.js
tools/ai-pipeline/agents/: designTokensAgent.js
tools/ai-pipeline/utils/: fileReader.js  fileWriter.js  llmclient.js
